# Python-task

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
big input data/: creater.py
big_input_data/: creater.py
src/: main.py
src/adapters/: __init__.py  postgres_adapter.py
src/app/: db_manager.py  file_manager.py
src/config/: settings.py
src/db_adapters/: base_adapter.py  postgres_adapter.py
src/managers/: __init__.py  db_manager.py  json_manager.py  load_manager.py  read_manager.py  save_manager.py
src/readers/: __init__.py  google_reader.py  local_reader.py
src/schemas/: schemas.py
src/scripts/: 00_indexes.sql  01_students_number.sql  02_smallest_average_age.sql  03_largest_age_diff.sql  04_different_sex.sql  05_indexes.sql
src/transformers/: json_transformer.py
src/utils/: __init__.py  batcher.py  folder_cleaner.py
src/validators/: __init__.py  input_validator.py  path_validator.py  url_validator.py
tests/: test_db_manager.py  test_file_manager.py  test_read_manager.py  test_save_manager.py
