[project]
name = "python-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "typer>=0.25.1",
    "xmltodict>=1.0.4",
]

[dependency-groups]
dev = []
