[project]
name = "python-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "ijson>=3.5.0",
    "orjson>=3.11.9",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
    "sqlparse>=0.5.5",
    "typer>=0.25.1",
    "xmltodict>=1.0.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
